--- a/mpApp/package.json
+++ b/mpApp/package.json
@@ -19,7 +19,10 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-marquee": "^0.5.0",
     "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.13.0-rc.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-redux": "^9.1.2"
