--- a/mpApp/package.json
+++ b/mpApp/package.json
@@ -25,7 +25,9 @@
     "react-native-reanimated": "^3.13.0-rc.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-redux": "^9.1.2"
+    "react-native-track-player": "^4.1.1",
+    "react-redux": "^9.1.2",
+    "expo-av": "~14.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
